# cookiecutter-fluo-project

./: .editorconfig  .hgignore  cookiecutter.json
{{cookiecutter.project_dir}}/: .hgignore  COPYING  MANIFEST.in  Vagrantfile  manage.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg
{{cookiecutter.project_dir}}/_patches/: easy_thumbnails.diff  treebeard.diff
{{cookiecutter.project_dir}}/etc/bash/: bashrc  inputrc  profile
{{cookiecutter.project_dir}}/etc/etckeeper/: etckeeper.conf
{{cookiecutter.project_dir}}/etc/mc/: ini  panels.ini
{{cookiecutter.project_dir}}/etc/mercurial/: hgrc  style
{{cookiecutter.project_dir}}/etc/vim/: filetype.vim  vimrc
{{cookiecutter.project_dir}}/etc/vim/plugin/: NERD_commenter.vim
{{cookiecutter.project_dir}}/etc/vim/snippets/: c.snippets  django.snippets  django_template.snippets  html.snippets  java.snippets  (+3 more)
{{cookiecutter.project_dir}}/{{cookiecutter.project_name}}/: __init__.py  apps.py  asgi.py  checks.py  settings.py  settings_base.py  settings_sample.py  urls.py  views.py  wsgi.py
{{cookiecutter.project_dir}}/{{cookiecutter.project_name}}/admin/: sites.py
{{cookiecutter.project_dir}}/{{cookiecutter.project_name}}/conf/: base.py  local.py  local_sample.py
{{cookiecutter.project_dir}}/{{cookiecutter.project_name}}/migrations/: 0001_initial.py
{{cookiecutter.project_dir}}/{{cookiecutter.project_name}}/templates/: 404.html  500.html  crossdomain.xml  index.html  robots.txt  sitemap.xml  sitemap_index.xml  template.html
{{cookiecutter.project_dir}}/{{cookiecutter.project_name}}/views/: __init__.py
(+9 files in other folders)
