[metadata]
name = {{ cookiecutter.project_dir }}
version = 1.0
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.email }}
description = {{ cookiecutter.project_description }}
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: {{ cookiecutter.license }}
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: WWW"

[options]
include_package_data = true
# python_requires = >=3.8
packages =
    {{ cookiecutter.project_name }}
install_require =
    django
zip_safe = false

[flake8]
exclude = build,.git,.hg,.tox,.lib,__pycache__,*/migrations/*.py
ignore = W503
inline-quotes = "
max-complexity = 18
max-line-length = 120
select = B,C,E,F,W,T4,B9
show-source = true

[isort]
profile = black
combine_as_imports = true
default_section = THIRDPARTY
indent = 4
known_first_party = fluo,{{ cookiecutter.project_name }}
line_length = 120
use_parentheses=True

[bdist_wheel]
universal = 0
